feat: Categories Created Activity to display and create categories
Signed-off-by: Rosário Pereira Fernandes <rosariofernandes51@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,13 @@
     <string name="hint_password">Password</string>
     <string name="hint_confirm_password">Confirm Password</string>
     <string name="action_continue">Continue</string>
+    <string name="action_add">Add</string>
+    <string name="action_cancel">Cancel</string>
     <string name="title_activity_main">Transactions</string>
     <string name="title_activity_new_transaction">New Transaction</string>
+    <string name="title_activity_categories">Categories</string>
+
+    <string name="new_category">New Category</string>
+    <string name="hint_category_name">Category Name</string>
+    <string name="new_category_confirmation">Category Added</string>
 </resources>
